--- a/estimation.html
+++ b/estimation.html
@@ -134,8 +134,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="1" data-path="generate-data.html"><a href="generate-data.html"><i class="fa fa-check"></i><b>1</b> Generate Data</a>
 <ul>
 <li class="chapter" data-level="1.1" data-path="generate-data.html"><a href="generate-data.html#generate-lambda"><i class="fa fa-check"></i><b>1.1</b> Generate <span class="math inline">\(\lambda\)</span></a></li>
-<li class="chapter" data-level="1.2" data-path="generate-data.html"><a href="generate-data.html#generate-choice-in-t-0"><i class="fa fa-check"></i><b>1.2</b> Generate Choice in <span class="math inline">\(t = 0\)</span></a></li>
-<li class="chapter" data-level="1.3" data-path="generate-data.html"><a href="generate-data.html#generate-realization-of-cost-in-t-0"><i class="fa fa-check"></i><b>1.3</b> Generate Realization of Cost in <span class="math inline">\(t = 0\)</span></a></li>
+<li class="chapter" data-level="1.2" data-path="generate-data.html"><a href="generate-data.html#generate-expectation-of-monitoring-score-and-severity"><i class="fa fa-check"></i><b>1.2</b> Generate (Expectation of) Monitoring Score and Severity</a></li>
+<li class="chapter" data-level="1.3" data-path="generate-data.html"><a href="generate-data.html#generate-choice-in-t-0"><i class="fa fa-check"></i><b>1.3</b> Generate Choice in <span class="math inline">\(t = 0\)</span></a></li>
+<li class="chapter" data-level="1.4" data-path="generate-data.html"><a href="generate-data.html#generate-realization-of-cost-in-t-0"><i class="fa fa-check"></i><b>1.4</b> Generate Realization of Cost in <span class="math inline">\(t = 0\)</span></a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="estimation.html"><a href="estimation.html"><i class="fa fa-check"></i><b>2</b> Estimation</a></li>
 </ul>
