--- a/generate-data-for-choice-model.html
+++ b/generate-data-for-choice-model.html
@@ -180,6 +180,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li>Generate <span class="math inline">\(\lambda_{imt}\)</span>. <span class="math inline">\(\lambda_{imt}\)</span> is one of the most significant variables that represents consumer’s risk (observable for consumers but not econometrician)</li>
 <li>Generate choice in <span class="math inline">\(t = 0\)</span> according to the choice model. In <span class="math inline">\(t = 0\)</span>, consumers have four options: the firm with and without monitoring, competitor 1 and 2.</li>
 <li>Generate realization of cost (claims count, severity and monitoring score) in <span class="math inline">\(t = 0\)</span> according to the cost model.</li>
+<li>Generate choice in <span class="math inline">\(t = 1\)</span> based on renewal prices realized by claims and scores. Now consumers have three options: the firm, competitor 1 and 2.</li>
 </ol>
 <div id="generate-lambda" class="section level2 hasAnchor" number="1.1">
 <h2><span class="header-section-number">1.1</span> Generate <span class="math inline">\(\lambda\)</span><a href="generate-data-for-choice-model.html#generate-lambda" class="anchor-section" aria-label="Anchor link to header"></a></h2>
